--- a/app/src/main/res/layout/activity_patient_home.xml
+++ b/app/src/main/res/layout/activity_patient_home.xml
@@ -43,5 +43,21 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="8dp"/>
 
+        <Button
+            android:id="@+id/button_patientviewlocation"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/roundedcorner"
+            android:text="View Location"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.142"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="8dp"
+            app:layout_column="0"
+            app:layout_row="0" />
+
     </android.support.v7.widget.GridLayout>
 </RelativeLayout>
