--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,17 +5,20 @@
     android:layout_height="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         tools:context=".MapsActivity" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/button_nearbyhospital"
@@ -23,8 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="600dp"
             android:layout_marginBottom="30dp"
+            android:layout_gravity="bottom"
             android:text="Nearby Hospital" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
