--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -5,6 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:layout_gravity="top|center"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentEnd="true"
+    app:layout_row="2"
+    app:layout_column="2"
     android:background="@drawable/gradient"
     android:scrollbars="none"
     app:barrierAllowsGoneWidgets="false"
@@ -20,10 +24,10 @@
             android:id="@+id/button"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="39dp"
             android:background="@drawable/roundedcorner"
-            android:text="Add User"
+            android:text="@string/add_user"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.142"
@@ -34,10 +38,10 @@
             android:id="@+id/button2"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:text="Add Appointment"
+            android:text="@string/add_appointment"
             android:textAlignment="center"
             app:layout_column="1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,41 +54,17 @@
             android:id="@+id/button3"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:text="View Appointment"
+            android:text="@string/view_appointment"
             android:textAlignment="center"
             app:layout_column="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.142"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_row="4"
+            app:layout_row="1"
             tools:layout_editor_absoluteY="8dp" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_below="@id/button3"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="20dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            app:layout_column="0"
-            app:layout_row="6"
-            app:srcCompat="@drawable/user" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginLeft="0dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/panic" />
-
 
     </android.support.v7.widget.GridLayout>
 </RelativeLayout>
