--- a/app/src/main/res/layout/activity_patient_home.xml
+++ b/app/src/main/res/layout/activity_patient_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:layout_gravity="top|center"
     android:background="@drawable/gradient"
     android:scrollbars="none"
     app:barrierAllowsGoneWidgets="false"
@@ -13,28 +12,33 @@
 
     <android.support.v7.widget.GridLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_marginTop="150dp"
+        app:columnCount="3"
+        app:rowCount="3">
 
         <Button
             android:id="@+id/button_patientviewprofile"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="39dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/roundedcorner"
             android:text="View Profile"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.142"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="8dp"/>
+            tools:layout_editor_absoluteY="8dp"
+            app:layout_column="0"
+            app:layout_row="0"/>
 
         <Button
             android:id="@+id/button_patientviewappointment"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="39dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/roundedcorner"
             android:text="View Appointment"
             android:textAlignment="center"
@@ -47,9 +51,9 @@
 
         <Button
             android:id="@+id/button_patientviewlocation"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
             android:background="@drawable/roundedcorner"
             android:text="View Location"
@@ -59,13 +63,13 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="8dp"
             app:layout_column="0"
-            app:layout_row="0" />
+            app:layout_row="1" />
 
         <Button
             android:id="@+id/button_patientscanqr"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
             android:background="@drawable/roundedcorner"
             android:text="Scan QR"
@@ -75,7 +79,7 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="8dp"
             app:layout_column="1"
-            app:layout_row="0" />
+            app:layout_row="1" />
 
     </android.support.v7.widget.GridLayout>
 </RelativeLayout>
