--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -1,8 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".PatientProfile">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView_updateprofile"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/update_profile"
+            android:textSize="30sp"
+            android:textColor="@color/colorAccent"
+            android:textAlignment="center"
+            android:layout_marginTop="30dp"
+            />
+
+        <EditText
+            android:id="@+id/editText_patientname"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@+id/textView_updateprofile"
+            android:hint="@string/fullname"/>
+
+        <EditText
+            android:id="@+id/editText_patienticnumber"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@id/editText_patientname"
+            android:hint="@string/identification_number"/>
+
+        <EditText
+            android:id="@+id/editText_patientaddress"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@+id/editText_patienticnumber"
+            android:hint="@string/address"/>
+
+        <EditText
+            android:id="@+id/editText_patientphonenumber"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@+id/editText_patientaddress"
+            android:hint="@string/phone_number"/>
+
+        <EditText
+            android:id="@+id/editText_patientstartdate"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@id/editText_patientphonenumber"
+            android:hint="@string/days_away_from_drugs"
+            android:clickable="true"
+            android:inputType="date"
+            android:focusable="true" />
+
+        <Button
+            android:id="@+id/button_patientsave"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:layout_below="@id/editText_patientstartdate"
+            android:text="@string/save"/>
+    </RelativeLayout>
+
+</ScrollView>
