--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -21,9 +21,9 @@
         tools:layout_editor_absoluteY="8dp">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:id="@+id/button_addpatient"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="39dp"
             android:background="@drawable/roundedcorner"
@@ -35,11 +35,11 @@
             tools:layout_editor_absoluteY="8dp" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:id="@+id/button_addappointment"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="39dp"
             android:background="@drawable/roundedcorner"
             android:text="@string/add_appointment"
             android:textAlignment="center"
@@ -51,11 +51,11 @@
             tools:layout_editor_absoluteY="8dp" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:id="@+id/button_viewappointment"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="39dp"
             android:background="@drawable/roundedcorner"
             android:text="@string/view_appointment"
             android:textAlignment="center"
