--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -17,7 +17,7 @@
             android:layout_centerHorizontal="true"
             android:text="@string/update_profile"
             android:textSize="30sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
             android:textAlignment="center"
             android:layout_marginTop="30dp"
             />
@@ -76,13 +76,6 @@
             android:datePickerMode="calendar"
             android:focusable="true" />
 
-        <TextView
-            android:id="@+id/textView_userid"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_below="@id/editText_patientstartdate"
-            android:layout_centerHorizontal="true" />
-
         <Button
             android:id="@+id/button_patientsave"
             android:layout_width="150dp"
@@ -90,7 +83,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:layout_below="@id/textView_userid"
+            android:layout_below="@id/editText_patientstartdate"
             android:text="@string/save"/>
     </RelativeLayout>
 
