--- a/app/src/main/res/layout/activity_addappointment.xml
+++ b/app/src/main/res/layout/activity_addappointment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".CreateAppointment">
+    tools:context=".AddAppointment">
 
     <RelativeLayout
         android:layout_width="match_parent"
