--- a/app/src/main/res/layout/activity_patient_home.xml
+++ b/app/src/main/res/layout/activity_patient_home.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentEnd="true"
+    android:layout_gravity="top|center"
     android:background="@drawable/gradient"
     android:scrollbars="none"
     app:barrierAllowsGoneWidgets="false"
@@ -17,41 +20,35 @@
         android:layout_marginTop="50dp" />
 
     <android.support.v7.widget.GridLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="150dp"
-        app:columnCount="3"
-        app:rowCount="3">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
+        app:alignmentMode="alignBounds"
+        app:useDefaultMargins="true">
 
         <Button
             android:id="@+id/button_patientviewprofile"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="25dp"
             android:background="@drawable/roundedcorner"
-            android:text="View Profile"
+            android:gravity="center"
+            android:text="@string/view_profile"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.142"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="8dp"
             app:layout_column="0"
-            app:layout_row="0"/>
+            app:layout_row="0" />
 
         <Button
             android:id="@+id/button_patientviewappointment"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/roundedcorner"
-            android:text="View Appointment"
+            android:gravity="center"
+            android:text="@string/view_appointment"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.142"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="8dp"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -60,14 +57,10 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
             android:background="@drawable/roundedcorner"
-            android:text="View Location"
+            android:gravity="center"
+            android:text="@string/view_location"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.142"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="8dp"
             app:layout_column="0"
             app:layout_row="1" />
 
@@ -75,15 +68,10 @@
             android:id="@+id/button_patientscanqr"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
             android:background="@drawable/roundedcorner"
-            android:text="Scan QR"
+            android:gravity="center"
+            android:text="@string/scan_qr"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.142"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="8dp"
             app:layout_column="1"
             app:layout_row="1" />
 
