--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="90"
-                android:centerColor="#bdc3c7"
-                android:endColor="#2c3e50"
-                android:startColor="#bdc3c7"
+            <gradient android:angle="90" android:centerColor="#6f86d6" android:endColor="#6f86d6"
                 android:type="linear" />
         </shape>
     </item>
