--- a/app/src/main/res/layout/activity_addappointment.xml
+++ b/app/src/main/res/layout/activity_addappointment.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView_createappointment"
@@ -17,7 +17,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-condensed-light"
-            android:text="APPOINTMENT"
+            android:text="@string/appointment"
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_light_default"
             android:textSize="36sp"
@@ -30,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_below="@id/textView_createappointment"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"></Spinner>
+            android:layout_marginTop="30dp" />
 
         <EditText
             android:id="@+id/editText_patientid"
@@ -42,7 +42,7 @@
             android:background="@drawable/roundedcorner"
             android:ems="10"
             android:inputType="textPersonName"
-            android:paddingLeft="10dp" />
+            android:paddingStart="10dp" />
 
         <EditText
             android:id="@+id/editText_patientname"
@@ -54,7 +54,7 @@
             android:layout_centerHorizontal="true"
             android:inputType="textPersonName"
             android:background="@drawable/roundedcorner"
-            android:paddingLeft="10dp" />
+            android:paddingStart="10dp" />
 
         <EditText
             android:id="@+id/editText_appointmentdate"
@@ -65,9 +65,9 @@
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/roundedcorner"
-            android:paddingLeft="10dp"
+            android:hint="@string/appointment_date"
             android:inputType="date"
-            android:hint="Appointment Date" />
+            android:paddingStart="10dp" />
 
         <EditText
             android:id="@+id/editText_appointmenttime"
@@ -79,8 +79,8 @@
             android:layout_centerHorizontal="true"
             android:inputType="time"
             android:background="@drawable/roundedcorner"
-            android:paddingLeft="10dp"
-            android:hint="Appointment Time" />
+            android:hint="@string/appointment_time"
+            android:paddingStart="10dp" />
 
         <Button
             android:id="@+id/button_addappointment"
@@ -92,7 +92,7 @@
             android:width="200dp"
             android:height="40dp"
             android:background="@drawable/roundedcorner"
-            android:text="SAVE" />
+            android:text="@string/save" />
 
         <TextView
             android:id="@+id/textView_userid"
@@ -100,7 +100,8 @@
             android:layout_height="50dp"
             android:layout_below="@+id/button_addappointment"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="30dp"
+            android:visibility="gone" />
 
     </RelativeLayout>
 </ScrollView>
