--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
+    android:padding="20dp"
     tools:context=".Login">
 
     <ImageView
@@ -16,33 +17,49 @@
         android:layout_marginTop="60dp"
         app:srcCompat="@drawable/logo_transparent" />
 
-    <EditText
-        android:id="@+id/editText_loginusername"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textinput_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:autofillHints=""
-        android:background="@drawable/roundedcorner"
-        android:ems="10"
-        android:hint="Username"
-        android:paddingLeft="10dp"
-        android:inputType="textPersonName"
-        android:textAlignment="viewStart" />
+        android:layout_marginTop="100dp"
+        app:errorEnabled="true">
 
-    <EditText
-        android:id="@+id/editText_loginpassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/editText_loginusername"
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email_address"
+            android:inputType="textEmailAddress" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textinput_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textinput_email"
+        app:errorEnabled="true"
+        app:passwordToggleEnabled="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textinput_password"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:ems="10"
+        android:layout_marginTop="40dp"
+        android:width="200dp"
+        android:height="40dp"
         android:background="@drawable/roundedcorner"
-        android:hint="Password"
-        android:paddingLeft="10dp"
-        android:inputType="textPassword" />
+        android:text="@string/login" />
 
     <TextView
         android:id="@+id/textView_roles"
@@ -61,17 +78,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-
-    <Button
-        android:id="@+id/button_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editText_loginpassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:width="200dp"
-        android:height="40dp"
-        android:background="@drawable/roundedcorner"
-        android:text="LOGIN" />
 
 </RelativeLayout>
