--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -11,6 +11,13 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/textView_userid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/textView_updateprofile"
             android:layout_width="250dp"
             android:layout_height="50dp"
