--- a/app/src/main/res/layout/activity_emergency_contacts.xml
+++ b/app/src/main/res/layout/activity_emergency_contacts.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
-    tools:context=".QrGenerate">
+    tools:context=".EmergencyContacts">
 
-
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/button_callpolice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:text="Scan the QR Code"
-        android:textSize="30sp" />
+        android:layout_marginTop="200dp"
+        android:text="@string/police" />
 
-    <ImageView
-        android:id="@+id/imageView_qrcode"
+    <Button
+        android:id="@+id/button_callhospital"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
-        android:layout_marginTop="80dp"
+        android:layout_below="@id/button_callpolice"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/qrcode" />
+        android:text="@string/hospital" />
+
 </RelativeLayout>
