--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="90" android:centerColor="#6f86d6" android:endColor="#6f86d6"
+            <gradient android:angle="90" android:centerColor="#008abe" android:endColor="#2bc4ff" android:startColor="#008abe"
                 android:type="linear" />
         </shape>
     </item>
