--- a/app/src/main/res/layout/activity_addappointment.xml
+++ b/app/src/main/res/layout/activity_addappointment.xml
@@ -57,11 +57,23 @@
             android:paddingStart="10dp" />
 
         <EditText
+            android:id="@+id/editText_patientemail"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/editText_patientname"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/roundedcorner"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:paddingStart="10dp" />
+
+        <EditText
             android:id="@+id/editText_appointmentdate"
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:ems="10"
-            android:layout_below="@id/editText_patientname"
+            android:layout_below="@id/editText_patientemail"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/roundedcorner"
