--- a/app/src/main/res/layout/activity_emergency_contacts.xml
+++ b/app/src/main/res/layout/activity_emergency_contacts.xml
@@ -3,22 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".EmergencyContacts">
 
     <Button
         android:id="@+id/button_callpolice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/roundedcorner"
+        android:drawableTop="@drawable/ic_security"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:gravity="center"
         android:text="@string/police" />
 
     <Button
         android:id="@+id/button_callhospital"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_callpolice"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/button_callpolice"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/roundedcorner"
+        android:drawableTop="@drawable/ic_local_hospital"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="@string/hospital" />
 
 </RelativeLayout>
