--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -26,8 +26,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="600dp"
             android:layout_marginBottom="30dp"
+            android:background="@drawable/roundedcorner"
+            android:fontFamily="sans-serif-condensed-medium"
             android:layout_gravity="bottom"
-            android:text="Nearby Hospital" />
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/nearby_hospital" />
 
     </RelativeLayout>
 
