--- a/app/src/main/res/layout/activity_patient_appointment_details.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_details.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBGRecyclerView"
     tools:context=".PatientAppointmentDetails">
 
     <TextView
@@ -14,6 +15,13 @@
 
     <TextView
         android:id="@+id/textView_appointmentid"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView_userid"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/textView_scandoctorid"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView_userid"
@@ -34,22 +42,61 @@
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/textView_appointmenttime"
-        android:layout_width="100dp"
+        android:id="@+id/textView_ad"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_patient_name" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="@string/appointment_details"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/textView_appointmenttime"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_ad"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
+        android:backgroundTint="@color/colorRecyclerView"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView_appointmentdate"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_appointmenttime" />
+        android:layout_below="@id/textView_appointmenttime"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
+        android:backgroundTint="@color/colorRecyclerView"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView_appointmentstatus"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_appointmentdate"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
+        android:backgroundTint="@color/colorRecyclerView"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button_scanqr"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/textView_appointmentdate"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/textView_appointmentstatus"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
         android:text="@string/scan_qr" />
 
 </RelativeLayout>
