--- a/app/src/main/res/layout/activity_patient_home.xml
+++ b/app/src/main/res/layout/activity_patient_home.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentEnd="true"
-    android:layout_gravity="top|center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    android:scrollbars="none"
-    app:barrierAllowsGoneWidgets="false"
     tools:context=".PatientHome">
 
     <TextView
@@ -18,15 +12,18 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView_datecounter"
-        android:layout_width="350dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_startdate"
         android:layout_centerHorizontal="true"
-        android:gravity="center" />
+        android:layout_marginTop="70dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:gravity="center"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView_userid"
@@ -41,76 +38,86 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="600dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="15sp"
         android:gravity="center" />
 
-    <android.support.v7.widget.GridLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="150dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="25dp"
-        app:alignmentMode="alignBounds"
-        app:useDefaultMargins="true">
+        android:columnCount="3"
+        android:orientation="vertical"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
+        android:rowCount="3">
 
         <Button
             android:id="@+id/button_patientviewprofile"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_row="0"
             android:background="@drawable/roundedcorner"
+            android:layout_column="0"
             android:gravity="center"
-            android:text="@string/view_profile"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_account_circle"
             android:textAlignment="center"
-            app:layout_column="0"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/button_patientviewappointment"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/roundedcorner"
-            android:gravity="center"
-            android:text="@string/view_appointment"
-            android:textAlignment="center"
-            app:layout_column="1"
-            app:layout_row="0" />
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/update_profile" />
 
         <Button
             android:id="@+id/button_patientviewlocation"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="30dp"
+            android:layout_row="1"
             android:background="@drawable/roundedcorner"
+            android:layout_column="0"
             android:gravity="center"
             android:text="@string/view_location"
+            android:layout_marginTop="30dp"
             android:textAlignment="center"
-            app:layout_column="0"
-            app:layout_row="1" />
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_map"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside" />
 
         <Button
-            android:id="@+id/button_patientscanqr"
+            android:id="@+id/button_patientviewappointment"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_row="0"
             android:background="@drawable/roundedcorner"
+            android:layout_column="1"
             android:gravity="center"
-            android:text="@string/scan_qr"
+            android:layout_marginLeft="30dp"
+            android:adjustViewBounds="true"
             android:textAlignment="center"
-            app:layout_column="1"
-            app:layout_row="1" />
+            android:drawableTop="@drawable/ic_calendar_today"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/view_appointment" />
 
         <Button
             android:id="@+id/button_call"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_row="1"
             android:background="@drawable/roundedcorner"
+            android:layout_column="1"
             android:gravity="center"
             android:text="@string/emergency_call"
+            android:layout_marginLeft="30dp"
             android:textAlignment="center"
-            app:layout_column="0"
-            app:layout_row="2" />
+            android:layout_marginTop="30dp"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_settings_phone"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside" />
 
-    </android.support.v7.widget.GridLayout>
+    </GridLayout>
 
     <Button
         android:id="@+id/button_logout"
@@ -121,5 +128,7 @@
         android:background="@drawable/roundedcorner"
         android:gravity="center"
         android:text="@string/logout"
+        android:fontFamily="sans-serif-condensed-medium"
         android:textAlignment="center" />
+
 </RelativeLayout>
