--- a/app/src/main/res/layout/activity_patient_view_appointment.xml
+++ b/app/src/main/res/layout/activity_patient_view_appointment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBGRecyclerView"
     tools:context=".PatientViewAppointment">
 
     <TextView
@@ -12,9 +13,28 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/textView_loa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="@string/list_of_appointment"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RecylerView_patientviewappointment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_loa"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
+        android:backgroundTint="@color/colorRecyclerView"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp" />
 
 </RelativeLayout>
