--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -37,7 +37,10 @@
             android:gravity="center"
             android:padding="16dp"
             android:textColor="#ffffff"
-            android:textSize="19dp" />
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorPrimaryDark"
+            android:indeterminateTintMode="src_atop"
+            android:textSize="19sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
