--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00bfff</color>
+    <color name="colorPrimaryDark">#1b384a</color>
+    <color name="colorAccent">#00acee</color>
+    <color name="colorBGRecyclerView">#62c8f3</color>
+    <color name="colorRecyclerView">#a8d5f7</color>
+    <color name="colorButton">#fdfff5</color>
 </resources>
