--- a/app/src/main/res/layout/activity_addpatient.xml
+++ b/app/src/main/res/layout/activity_addpatient.xml
@@ -12,68 +12,68 @@
 
         <TextView
             android:id="@+id/textView_addpatient"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-condensed-light"
             android:text="@string/add_user"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:textAlignment="center"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/editText_patientemail"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/textView_addpatient"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/textView_addpatient"
+            android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:ems="10"
+            android:fontFamily="sans-serif-condensed-medium"
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
-            android:paddingStart="10dp" />
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp" />
 
 
         <EditText
             android:id="@+id/editText_patientpassword"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/editText_patientemail"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/editText_patientemail"
+            android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:ems="10"
+            android:fontFamily="sans-serif-condensed-medium"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:paddingStart="10dp" />
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp" />
 
         <EditText
             android:id="@+id/editText_patientconfirmpassword"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/editText_patientpassword"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/editText_patientpassword"
+            android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:ems="10"
+            android:fontFamily="sans-serif-condensed-medium"
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
-            android:paddingStart="10dp" />
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp" />
 
         <Button
             android:id="@+id/button_signup"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/editText_patientconfirmpassword"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:width="200dp"
-            android:height="40dp"
+            android:layout_below="@id/editText_patientconfirmpassword"
             android:background="@drawable/roundedcorner"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="@string/save" />
 
     </RelativeLayout>
