--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -1,84 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:layout_gravity="top|center"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentEnd="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    android:scrollbars="none"
-    app:barrierAllowsGoneWidgets="false"
     tools:context=".DoctorHome">
 
-    <android.support.v7.widget.GridLayout
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/logo_transparent" />
+
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
-        app:alignmentMode="alignBounds"
-        app:useDefaultMargins="true">
+        android:layout_centerVertical="true"
+        android:layout_marginTop="150dp"
+        android:columnCount="3"
+        android:orientation="vertical"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
+        android:rowCount="3">
 
         <Button
             android:id="@+id/button_addpatient"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_row="0"
             android:background="@drawable/roundedcorner"
-            android:text="@string/add_user"
+            android:layout_column="0"
             android:gravity="center"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_person_add"
             android:textAlignment="center"
-            app:layout_column="0"
-            app:layout_row="0" />
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/add_user" />
 
         <Button
             android:id="@+id/button_addappointment"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginStart="10dp"
+            android:layout_row="0"
+            android:layout_column="1"
             android:background="@drawable/roundedcorner"
-            android:text="@string/add_appointment"
+            android:layout_marginLeft="30dp"
             android:gravity="center"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_alarm_add"
             android:textAlignment="center"
-            app:layout_column="1"
-            app:layout_row="0" />
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/add_appointment" />
 
         <Button
             android:id="@+id/button_viewappointment"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_row="1"
+            android:layout_column="1"
             android:layout_marginTop="30dp"
             android:background="@drawable/roundedcorner"
-            android:text="@string/view_appointment"
+            android:layout_marginLeft="30dp"
             android:gravity="center"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_calendar_today"
             android:textAlignment="center"
-            app:layout_column="1"
-            app:layout_row="1" />
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/view_appointment" />
 
         <Button
             android:id="@+id/button_viewpatient"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_row="1"
+            android:layout_column="0"
             android:background="@drawable/roundedcorner"
+            android:layout_marginTop="30dp"
             android:gravity="center"
-            android:text="@string/view_user"
+            android:adjustViewBounds="true"
+            android:drawableTop="@drawable/ic_person"
             android:textAlignment="center"
-            app:layout_column="0"
-            app:layout_row="1" />
+            android:fontFamily="sans-serif-condensed-medium"
+            android:scaleType="centerInside"
+            android:text="@string/view_user" />
 
-    </android.support.v7.widget.GridLayout>
+    </GridLayout>
 
     <Button
         android:id="@+id/button_logout"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="550dp"
+        android:layout_marginTop="670dp"
         android:background="@drawable/roundedcorner"
         android:gravity="center"
         android:text="@string/logout"
+        android:fontFamily="sans-serif-condensed-medium"
         android:textAlignment="center" />
 
 </RelativeLayout>
