--- a/app/src/main/res/layout/activity_patient_view_appointment.xml
+++ b/app/src/main/res/layout/activity_patient_view_appointment.xml
@@ -27,8 +27,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RecylerView_patientviewappointment"
-        android:layout_width="match_parent"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/textView_loa"
         android:layout_marginTop="30dp"
         android:background="@drawable/roundedcorner"
