Adjust on date and time for appointment

--- a/app/src/main/res/layout/activity_view_appointment.xml
+++ b/app/src/main/res/layout/activity_view_appointment.xml
@@ -24,6 +24,33 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_loa">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Name" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="150dp"
+            android:gravity="center"
+            android:text="Time" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="250dp"
+            android:gravity="center"
+            android:text="Date" />
+
+    </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RecylerView_viewappointment"
         android:layout_width="370dp"
