--- a/app/src/main/res/layout/activity_view_patient_details.xml
+++ b/app/src/main/res/layout/activity_view_patient_details.xml
@@ -80,4 +80,17 @@
         android:paddingEnd="10dp"
         android:textSize="20sp" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecylerView_viewpatient"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_patientphonenumber"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedcorner"
+        android:backgroundTint="@color/colorRecyclerView"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp" />
+
 </RelativeLayout>
