--- a/app/src/main/res/layout/recyclerview_viewappointment.xml
+++ b/app/src/main/res/layout/recyclerview_viewappointment.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorRecyclerView"
     android:fontFamily="sans-serif-condensed-medium"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView_patient_appointmentid"
@@ -14,21 +14,23 @@
 
     <TextView
         android:id="@+id/textView_patient_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:textSize="18sp" />
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/textView_patient_appointmenttime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/textView_patient_appointmentdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
