--- a/app/src/main/res/layout/recyclerview_viewpatient.xml
+++ b/app/src/main/res/layout/recyclerview_viewpatient.xml
@@ -4,24 +4,27 @@
     android:layout_height="wrap_content"
     android:background="@color/colorRecyclerView"
     android:fontFamily="sans-serif-condensed-medium"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView_patient_id"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/textView_patient_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/textView_patienticnumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
